@@ -8,6 +8,8 @@ Changes since v1.11
 o Published the OnDragOver and OnDragDrop events of the entry viewer
   component.
 
+o Added methods for reloading the header and the menus of a guide.
+
 Changes since v1.10
 ===================
 
